--- a/index.html
+++ b/index.html
@@ -1,19 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebAR Sample</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.2/aframe/build/aframe-ar.js"></script>
+  <meta charset="UTF-8">
+  <title>WebAR Floor Detection</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <script src="https://cdn.rawgit.com/AR-js-org/AR.js/3.1.1/three.js/build/ar.js"></script>
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+    }
+    #info {
+      position: absolute;
+      top: 10px;
+      width: 100%;
+      text-align: center;
+      color: #fff;
+      z-index: 1;
+    }
+  </style>
 </head>
-<body style="margin: 0; overflow: hidden;">
-    <a-scene embedded arjs>
-        <a-marker preset="hiro">
-            <a-box position="0 0.5 0" material="color: red;"></a-box>
-        </a-marker>
-        <a-entity camera></a-entity>
-    </a-scene>
+<body>
+  <div id="info">Move your device to detect the floor and place the object.</div>
+  <script>
+    // 基本的なThree.jsの設定
+    var scene = new THREE.Scene();
+    var camera = new THREE.Camera();
+    scene.add(camera);
+
+    var renderer = new THREE.WebGLRenderer({ alpha: true });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.body.appendChild(renderer.domElement);
+
+    // AR.jsの設定
+    var arToolkitSource = new THREEx.ArToolkitSource({
+      sourceType: 'webcam',
+    });
+
+    arToolkitSource.init(function onReady() {
+      onResize();
+    });
+
+    window.addEventListener('resize', function () {
+      onResize();
+    });
+
+    function onResize() {
+      arToolkitSource.onResize();
+      arToolkitSource.copySizeTo(renderer.domElement);
+      if (arToolkitContext.arController !== null) {
+        arToolkitSource.copySizeTo(arToolkitContext.arController.canvas);
+      }
+    }
+
+    var arToolkitContext = new THREEx.ArToolkitContext({
+      cameraParametersUrl: 'https://cdn.rawgit.com/AR-js-org/AR.js/3.1.1/three.js/examples/marker-training/examples/camera_para.dat',
+      detectionMode: 'mono',
+    });
+
+    arToolkitContext.init(function onCompleted() {
+      camera.projectionMatrix.copy(arToolkitContext.getProjectionMatrix());
+    });
+
+    // 床検出用のプレーン
+    var floorGeometry = new THREE.PlaneGeometry(100, 100);
+    var floorMaterial = new THREE.MeshBasicMaterial({
+      color: 0x00ff00,
+      side: THREE.DoubleSide,
+    });
+    var floor = new THREE.Mesh(floorGeometry, floorMaterial);
+    floor.rotation.x = -Math.PI / 2;
+    floor.position.y = -1;
+    scene.add(floor);
+
+    // オブジェクト
+    var objectGeometry = new THREE.BoxGeometry(1, 1, 1);
+    var objectMaterial = new THREE.MeshBasicMaterial({ color: 0xff0000 });
+    var object = new THREE.Mesh(objectGeometry, objectMaterial);
+    object.position.y = 0.5;
+    scene.add(object);
+
+    // アニメーションループ
+    function animate() {
+      requestAnimationFrame(animate);
+      if (arToolkitSource.ready) {
+        arToolkitContext.update(arToolkitSource.domElement);
+      }
+      renderer.render(scene, camera);
+    }
+
+    animate();
+  </script>
 </body>
 </html>
