--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WebAR Floor Detection</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script src="https://cdn.rawgit.com/AR-js-org/AR.js/3.1.1/three.js/build/ar.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.2/aframe/build/aframe-ar.js"></script>
   <style>
     body {
       margin: 0;
@@ -25,9 +26,7 @@
   <script>
     // 基本的なThree.jsの設定
     var scene = new THREE.Scene();
-    var camera = new THREE.Camera();
-    scene.add(camera);
-
+    var camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 0.1, 1000);
     var renderer = new THREE.WebGLRenderer({ alpha: true });
     renderer.setSize(window.innerWidth, window.innerHeight);
     document.body.appendChild(renderer.domElement);
@@ -46,10 +45,10 @@
     });
 
     function onResize() {
-      arToolkitSource.onResize();
-      arToolkitSource.copySizeTo(renderer.domElement);
+      arToolkitSource.onResizeElement();
+      arToolkitSource.copyElementSizeTo(renderer.domElement);
       if (arToolkitContext.arController !== null) {
-        arToolkitSource.copySizeTo(arToolkitContext.arController.canvas);
+        arToolkitSource.copyElementSizeTo(arToolkitContext.arController.canvas);
       }
     }
 
