--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WebXR ARCore Example</title>
+  <title>WebXR ARCore-like Example</title>
   <style>
     body {
       margin: 0;
@@ -26,36 +26,37 @@
       width: 100%;
       height: 100%;
     }
-    #enter-ar {
-      position: absolute;
-      bottom: 10px;
-      left: 50%;
-      transform: translateX(-50%);
-      padding: 10px 20px;
-      background-color: rgba(0, 0, 0, 0.8);
-      color: white;
-      font-size: 20px;
-      border: none;
-      cursor: pointer;
-      z-index: 1;
-    }
   </style>
 </head>
 <body>
-  <button id="enter-ar">Enter AR</button>
+  <video id="video" playsinline autoplay></video>
+  <canvas id="canvas"></canvas>
   <script src="https://cdn.jsdelivr.net/npm/three@0.135.0/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.135.0/examples/jsm/webxr/ARButton.js"></script>
   <script>
     let camera, scene, renderer;
     let controller;
     let reticle;
-    let hitTestSource = null;
-    let hitTestSourceRequested = false;
-
-    init();
-    animate();
+    let video;
+    let videoTexture;
 
     function init() {
+      video = document.getElementById('video');
+
+      // カメラ映像を取得
+      navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } })
+        .then(stream => {
+          video.srcObject = stream;
+          video.onloadedmetadata = () => {
+            video.play();
+            setupThreeJS();
+          };
+        })
+        .catch(err => {
+          console.error('カメラの起動に失敗しました: ', err);
+        });
+    }
+
+    function setupThreeJS() {
       scene = new THREE.Scene();
 
       camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 0.1, 100);
@@ -65,17 +66,17 @@
       light.position.set(0.5, 1, 0.25);
       scene.add(light);
 
+      videoTexture = new THREE.VideoTexture(video);
+      const videoMaterial = new THREE.MeshBasicMaterial({ map: videoTexture });
+      const videoGeometry = new THREE.PlaneGeometry(2, 2);
+      const videoMesh = new THREE.Mesh(videoGeometry, videoMaterial);
+      videoMesh.position.z = -2;
+      scene.add(videoMesh);
+
       renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
       renderer.setPixelRatio(window.devicePixelRatio);
       renderer.setSize(window.innerWidth, window.innerHeight);
-      renderer.xr.enabled = true;
       document.body.appendChild(renderer.domElement);
-
-      document.getElementById('enter-ar').addEventListener('click', () => {
-        navigator.xr.requestSession('immersive-ar', {
-          requiredFeatures: ['hit-test']
-        }).then(onSessionStarted);
-      });
 
       const geometry = new THREE.BoxGeometry(0.1, 0.1, 0.1);
       const material = new THREE.MeshStandardMaterial({ color: 0x00ff00 });
@@ -84,54 +85,19 @@
       cube.castShadow = true;
       scene.add(cube);
 
-      const reticleGeometry = new THREE.RingGeometry(0.15, 0.2, 32).rotateX(- Math.PI / 2);
+      const reticleGeometry = new THREE.RingGeometry(0.15, 0.2, 32).rotateX(-Math.PI / 2);
       const reticleMaterial = new THREE.MeshBasicMaterial();
       reticle = new THREE.Mesh(reticleGeometry, reticleMaterial);
       reticle.matrixAutoUpdate = false;
       reticle.visible = false;
       scene.add(reticle);
 
-      controller = renderer.xr.getController(0);
-      controller.addEventListener('select', onSelect);
+      controller = new THREE.Group();
       scene.add(controller);
 
       window.addEventListener('resize', onWindowResize, false);
-    }
 
-    function onSessionStarted(session) {
-      session.addEventListener('end', onSessionEnded);
-      renderer.xr.setSession(session);
-      document.getElementById('enter-ar').style.display = 'none';
-
-      session.requestReferenceSpace('viewer').then((referenceSpace) => {
-        session.requestHitTestSource({ space: referenceSpace }).then((source) => {
-          hitTestSource = source;
-        });
-      });
-
-      session.addEventListener('end', () => {
-        hitTestSourceRequested = false;
-        hitTestSource = null;
-      });
-
-      hitTestSourceRequested = true;
-    }
-
-    function onSessionEnded(event) {
-      document.getElementById('enter-ar').style.display = 'block';
-      hitTestSourceRequested = false;
-      hitTestSource = null;
-    }
-
-    function onSelect() {
-      if (reticle.visible) {
-        const geometry = new THREE.BoxGeometry(0.1, 0.1, 0.1);
-        const material = new THREE.MeshStandardMaterial({ color: Math.random() * 0xffffff });
-        const mesh = new THREE.Mesh(geometry, material);
-        mesh.position.setFromMatrixPosition(reticle.matrix);
-        mesh.scale.y = Math.random() * 2 + 1;
-        scene.add(mesh);
-      }
+      animate();
     }
 
     function onWindowResize() {
@@ -141,39 +107,16 @@
     }
 
     function animate() {
-      renderer.setAnimationLoop(render);
+      requestAnimationFrame(animate);
+      render();
     }
 
-    function render(timestamp, frame) {
-      if (frame) {
-        const referenceSpace = renderer.xr.getReferenceSpace();
-        const session = renderer.xr.getSession();
-
-        if (hitTestSourceRequested && !hitTestSource) {
-          session.requestReferenceSpace('viewer').then((referenceSpace) => {
-            session.requestHitTestSource({ space: referenceSpace }).then((source) => {
-              hitTestSource = source;
-            });
-          });
-        }
-
-        if (hitTestSource) {
-          const hitTestResults = frame.getHitTestResults(hitTestSource);
-
-          if (hitTestResults.length) {
-            const hit = hitTestResults[0];
-            const hitPose = hit.getPose(referenceSpace);
-
-            reticle.visible = true;
-            reticle.matrix.fromArray(hitPose.transform.matrix);
-          } else {
-            reticle.visible = false;
-          }
-        }
-      }
-
+    function render() {
+      // 仮想オブジェクトを描画
       renderer.render(scene, camera);
     }
+
+    init();
   </script>
 </body>
 </html>
