--- a/index.html
+++ b/index.html
@@ -2,15 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
-    <title>untitled</title>
+    <title>WebAR Example</title>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+    <style>
+      body, html { margin: 0; padding: 0; overflow: hidden; }
+      a-scene { width: 100vw; height: 100vh; }
+    </style>
   </head>
   <body>
-    <a-scene embedded arjs>
-      <a-box position="5 0 -7" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+    <a-scene embedded arjs="sourceType: webcam;">
+      <a-marker preset="hiro">
+        <a-box position="0 0.5 0" rotation="0 45 0" color="#4CC3D9"></a-box>
+        <a-sphere position="0 1.25 0" radius="0.5" color="#EF2D5E"></a-sphere>
+        <a-cylinder position="0 0.75 0" radius="0.25" height="1.5" color="#FFC65D"></a-cylinder>
+      </a-marker>
+      <a-entity camera></a-entity>
     </a-scene>
   </body>
 </html>
