--- a/index.html
+++ b/index.html
@@ -1,23 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WebAR with A-Frame and AR.js</title>
-  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar-nft.js"></script>
-  <style>
-    body { margin: 0; overflow: hidden; }
-  </style>
+  <meta charset="utf-8" />
+  <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
+  <title>AR Demo</title>
 </head>
 <body>
-  <a-scene embedded arjs="sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
-    <a-marker preset="hiro">
-      <a-box position="0 0.5 0" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 0" radius="0.5" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="0 0.75 0" radius="0.25" height="1.5" color="#FFC65D"></a-cylinder>
-    </a-marker>
-    <a-entity camera></a-entity>
+  <button id="start-ar">Enter AR</button>
+  <a-scene embedded arjs>
+    <a-box position="0 0 -2" rotation="0 45 0" color="#4CC3D9"></a-box>
+    <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
+    <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
   </a-scene>
+  <script>
+    const button = document.getElementById('start-ar');
+    let xrSession = null;
+    let xrHitTestSource = null;
+
+    button.addEventListener('click', async () => {
+      if (navigator.xr) {
+        const supported = await navigator.xr.isSessionSupported('immersive-ar');
+        if (supported) {
+          navigator.xr.requestSession('immersive-ar', {
+            requiredFeatures: ['hit-test']
+          }).then(onSessionStarted);
+        } else {
+          console.log('AR not supported');
+        }
+      }
+    });
+
+    function onSessionStarted(session) {
+      xrSession = session;
+      xrSession.addEventListener('end', onSessionEnded);
+
+      let canvas = document.createElement('canvas');
+      let gl = canvas.getContext('webgl', { xrCompatible: true });
+      session.updateRenderState({ baseLayer: new XRWebGLLayer(session, gl) });
+
+      session.requestReferenceSpace('viewer').then((refSpace) => {
+        xrSession.requestHitTestSource({ space: refSpace }).then((hitTestSource) => {
+          xrHitTestSource = hitTestSource;
+        });
+      });
+
+      session.requestReferenceSpace('local').then((refSpace) => {
+        xrSession.requestAnimationFrame(onXRFrame);
+      });
+    }
+
+    function onXRFrame(time, frame) {
+      let session = frame.session;
+      session.requestAnimationFrame(onXRFrame);
+
+      let viewerPose = frame.getViewerPose(xrRefSpace);
+      if (xrHitTestSource && viewerPose) {
+        let hitTestResults = frame.getHitTestResults(xrHitTestSource);
+        if (hitTestResults.length > 0) {
+          let hitPose = hitTestResults[0].getPose(xrRefSpace);
+          // Use hitPose to place your object in the scene
+        }
+      }
+    }
+
+    function onSessionEnded() {
+      xrSession = null;
+      xrHitTestSource = null;
+    }
+  </script>
 </body>
 </html>
