--- a/index.html
+++ b/index.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8" />
-  <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
-  <title>AR Demo</title>
+  <meta charset="utf-8">
+  <title>ARCore with WebXR</title>
+  <style>
+    body { margin: 0; }
+    canvas { display: block; }
+  </style>
 </head>
 <body>
   <button id="start-ar">Enter AR</button>
-  <a-scene embedded arjs>
-    <a-box position="0 0 -2" rotation="0 45 0" color="#4CC3D9"></a-box>
-    <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-    <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-  </a-scene>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script>
-    const button = document.getElementById('start-ar');
     let xrSession = null;
     let xrHitTestSource = null;
-
-    button.addEventListener('click', async () => {
+    let xrRefSpace = null;
+    let gl = null;
+    let renderer = null;
+    let scene = null;
+    let camera = null;
+    let reticle = null;
+    
+    document.getElementById('start-ar').addEventListener('click', async () => {
       if (navigator.xr) {
         const supported = await navigator.xr.isSessionSupported('immersive-ar');
         if (supported) {
           navigator.xr.requestSession('immersive-ar', {
-            requiredFeatures: ['hit-test']
+            requiredFeatures: ['local', 'hit-test']
           }).then(onSessionStarted);
         } else {
           console.log('AR not supported');
@@ -36,7 +39,7 @@
       xrSession.addEventListener('end', onSessionEnded);
 
       let canvas = document.createElement('canvas');
-      let gl = canvas.getContext('webgl', { xrCompatible: true });
+      gl = canvas.getContext('webgl', { xrCompatible: true });
       session.updateRenderState({ baseLayer: new XRWebGLLayer(session, gl) });
 
       session.requestReferenceSpace('viewer').then((refSpace) => {
@@ -46,6 +49,8 @@
       });
 
       session.requestReferenceSpace('local').then((refSpace) => {
+        xrRefSpace = refSpace;
+        initThreeJS();
         xrSession.requestAnimationFrame(onXRFrame);
       });
     }
@@ -55,18 +60,58 @@
       session.requestAnimationFrame(onXRFrame);
 
       let viewerPose = frame.getViewerPose(xrRefSpace);
-      if (xrHitTestSource && viewerPose) {
-        let hitTestResults = frame.getHitTestResults(xrHitTestSource);
+      if (viewerPose) {
+        const viewport = session.renderState.baseLayer.getViewport(viewerPose.views[0]);
+        gl.viewport(viewport.x, viewport.y, viewport.width, viewport.height);
+
+        reticle.visible = false;
+        const hitTestResults = frame.getHitTestResults(xrHitTestSource);
         if (hitTestResults.length > 0) {
-          let hitPose = hitTestResults[0].getPose(xrRefSpace);
-          // Use hitPose to place your object in the scene
+          const hit = hitTestResults[0];
+          const hitPose = hit.getPose(xrRefSpace);
+          reticle.visible = true;
+          reticle.position.set(hitPose.transform.position.x, hitPose.transform.position.y, hitPose.transform.position.z);
+          reticle.updateMatrixWorld(true);
         }
+
+        renderer.render(scene, camera);
       }
     }
 
     function onSessionEnded() {
       xrSession = null;
       xrHitTestSource = null;
+      if (renderer) renderer.setAnimationLoop(null);
+    }
+
+    function initThreeJS() {
+      renderer = new THREE.WebGLRenderer({ alpha: true, preserveDrawingBuffer: true, context: gl });
+      renderer.autoClear = false;
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      document.body.appendChild(renderer.domElement);
+
+      scene = new THREE.Scene();
+
+      camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 0.01, 20);
+      scene.add(camera);
+
+      const geometry = new THREE.CubeGeometry(0.1, 0.1, 0.1);
+      const material = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
+      reticle = new THREE.Mesh(geometry, material);
+      reticle.visible = false;
+      scene.add(reticle);
+
+      xrSession.addEventListener('select', onSelect);
+    }
+
+    function onSelect() {
+      if (reticle.visible) {
+        const geometry = new THREE.CubeGeometry(0.1, 0.1, 0.1);
+        const material = new THREE.MeshBasicMaterial({ color: 0xff0000 });
+        const cube = new THREE.Mesh(geometry, material);
+        cube.position.copy(reticle.position);
+        scene.add(cube);
+      }
     }
   </script>
 </body>
