--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <h1>3Dモデルを表示し、ARで見る</h1>
 
-    <model-viewer src="path/to/your-model.glb" 
+    <model-viewer src="gltf/Chocolate_Splash_Free_003.glb" 
                   alt="3D Model" 
                   auto-rotate 
                   camera-controls 
